# Garuda_datalake_3

./: .gitignore  .npmignore  App.tsx  CHANGELOG.md  LICENSE  ML_CONTEXT.md  README.md  app.json  index.html  jest.setup.js  package-lock.json  package.json  plan.md  tsconfig.build.json  vite.config.ts
__tests__/: LivenessRecognition.test.ts
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/com.nhai.datalake/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/nhai/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/nhai.xcodeproj/: project.pbxproj
scripts/: ml-footprint-check.js
src/: index.ts  index.web.tsx  types.ts
src/components/: CameraScanner.tsx  DesktopWebDashboard.css  DesktopWebDashboard.tsx  MediaPipeCheck.tsx  MobileFaceNetCheck.tsx
src/core/: CLAHEProcessor.ts  EnrollmentEngine.ts  FaceEmbedder.ts  LivenessDetector.ts
src/crypto/: AuditLedger.ts
src/hooks/: useCameraPermissions.ts
src/native/: claheFilter.cpp
src/services/: awsAuthService.ts  awsSyncService.ts  claheProcessor.ts  cryptographicLedger.ts  databaseSchema.ts  datalakeApiService.ts  enrollmentOrchestrator.ts  faceEmbedder.ts  livenessMath.ts  localDbAdapter.ts  syncManager.ts
src/storage/: AsyncStorageAdapter.ts  LocalDatabase.ts  SqliteWebAdapter.ts  types.ts
src/sync/: AwsAuthClient.ts  AwsSyncClient.ts  DatalakeApiClient.ts
src/web-mocks/: asyncStorage.ts  netinfo.ts  react-native.ts  (+4 more)
(+1 files in other folders)
